# MoPSi-Othello

./: README.md
CppVersion/: CMakeLists.txt  display.cpp  display.h  game.cpp  game.h  gamedisplay.cpp  gamedisplay.h  main.cpp  position.cpp  position.h  settings.cpp  settings.h  strategies.cpp  strategies.h
PythonVersion/: display.py  game.py  main.py
PythonVersion/utils/: constants.py
